--- a/src/front/index.html
+++ b/src/front/index.html
@@ -4,171 +4,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Diris Logs</title>
-  <style>
-      body {
-          font-family: Arial, sans-serif;
-          margin: 0;
-          padding: 20px;
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          background-color: #f4f4f4;
-      }
-
-      table {
-          border-collapse: collapse;
-          width: 80%;
-          margin-top: 20px;
-      }
-
-      th,
-      td {
-          border: 1px solid #ddd;
-          padding: 8px;
-          text-align: center;
-      }
-
-      th {
-          background-color: #4CAF50;
-          color: white;
-      }
-
-      #lastUpdate {
-          margin-top: 10px;
-          font-size: 14px;
-          color: #555;
-      }
-      /* Стили для вертикальної таблиці */
-      .vertical-table {
-          display: grid;
-          grid-template-columns: repeat(4, 1fr);
-          gap: 10px;
-      }
-      .vertical-table div {
-          border: 1px solid #ddd;
-          padding: 8px;
-          text-align: center;
-      }
-      .vertical-table .header {
-          background-color: #4CAF50;
-          color: white;
-          font-weight: bold;
-      }
-  </style>
-  <!-- Підключення axios через CDN -->
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 <div>
-  <h2>Diris Logs</h2>
   <div id="lastUpdate">Last update: Not yet updated</div>
-  <table id="logsTable">
-    <thead>
-    <tr>
-      <th>Time</th>
-      <th>Station</th>
-      <th>F</th>
-      <th>IL1</th>
-      <th>IL2</th>
-      <th>IL3</th>
-      <th>cos f</th>
-      <th>P</th>
-      <th>Q</th>
-      <th>S</th>
-      <th>U12</th>
-      <th>U23</th>
-      <th>U31</th>
-    </tr>
-    </thead>
-    <tbody id="logsBody">
-    <!-- Данні будуть додаватися сюди -->
-    </tbody>
-  </table>
+  <div class="table-container">
+    <table id="logsTable">
+      <!-- Заголовки та дані будуть додаватися сюди -->
+    </table>
+  </div>
 </div>
-
-<script>
-  const stationNames = {
-    90: 'Великий Любінь',
-    91: 'Скнилів'
-  };
-  // Функція для отримання даних з бекенду за допомогою axios
-  async function fetchLogs() {
-    try {
-      const response = await axios.get('http://localhost:3000/diris-logs'); // URL до вашого бекенду
-      const data = response.data;
-      // Мапінг ID на назви станцій
-
-      // Очищення старих даних і оновлення таблиці
-      updateTable(data);
-      updateLastUpdateTime();
-    } catch (error) {
-      console.error('Failed to fetch data', error);
-    }
-  }
-
-  // Функція для оновлення таблиці з даними
-  function updateTable(logs) {
-    const logsBody = document.getElementById('logsBody');
-    logsBody.innerHTML = ''; // Очищаємо таблицю перед додаванням нових даних
-
-    // Перевіряємо, чи отримали дані для 90 і 91 дірісів
-    const filteredLogs = logs.filter(log => log.diris_id === 90 || log.diris_id === 91);
-
-
-
-    filteredLogs.forEach(log => {
-      const row = document.createElement('tr');
-      row.innerHTML = `
-          <td>${formatTime(log.time)}</td>
-          <td>${stationNames[log.diris_id]}</td>
-          <td>${log.f}</td>
-          <td>${log.i1}</td>
-          <td>${log.i2}</td>
-          <td>${log.i3}</td>
-          <td>${log.pa}</td>
-          <td>${log.pa_p}</td>
-          <td>${log.pa_r}</td>
-          <td>${log.pa_s}</td>
-          <td>${log.u12}</td>
-          <td>${log.u23}</td>
-          <td>${log.u31}</td>
-        `;
-      logsBody.appendChild(row);
-    });
-  }
-
-
-  // Функція для форматування дати у вигляді години, хвилини, секунди з урахуванням часового поясу
-  function formatTime(dateTime) {
-    const date = new Date(dateTime);
-
-    // Додаємо 3 години до часу
-    date.setHours(date.getHours() + 3);
-
-    const options = {
-      hour: '2-digit',
-      minute: '2-digit',
-      second: '2-digit',
-      timeZoneName: 'short'
-    };
-    const formatter = new Intl.DateTimeFormat('en-GB', options);
-    const parts = formatter.formatToParts(date);
-    const hours = parts.find(part => part.type === 'hour').value;
-    const minutes = parts.find(part => part.type === 'minute').value;
-    const seconds = parts.find(part => part.type === 'second').value;
-    return `${hours}:${minutes}:${seconds}`;
-  }
-
-  // Функція для оновлення часу останнього запиту
-  function updateLastUpdateTime() {
-    const lastUpdate = document.getElementById('lastUpdate');
-    const currentTime = new Date().toLocaleTimeString(); // Поточний час у форматі HH:MM:SS
-    lastUpdate.textContent = `Last update: ${currentTime}`;
-  }
-
-  // Спочатку отримуємо дані, потім встановлюємо інтервал на 10 секунд
-  fetchLogs();
-  setInterval(fetchLogs, 10000);
-</script>
+<script src="scripts.js"></script>
 </body>
 </html>
