--- a/src/front/index.html
+++ b/src/front/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Diris Logs</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
 <div>
@@ -15,6 +15,6 @@
     </table>
   </div>
 </div>
-<script src="scripts.js"></script>
+<script src="./scripts.js"></script>
 </body>
 </html>
